bk_ida/gccida/g0/loop_givs_check
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/loop_givs_check/src/loop.c:4944:1: error: use of undeclared identifier 'induction_1'
induction_1 *v; // [rsp+20h] [rbp-10h] 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/loop_givs_check/src/loop.c:4944:14: error: use of undeclared identifier 'v'
induction_1 *v; // [rsp+20h] [rbp-10h] 
             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/loop_givs_check/src/loop.c:4949:7: error: use of undeclared identifier 'v'
for ( v = bl_0->giv; v; v = v->next_iv ) 
      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/loop_givs_check/src/loop.c:4949:22: error: use of undeclared identifier 'v'
for ( v = bl_0->giv; v; v = v->next_iv ) 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/loop_givs_check/src/loop.c:4949:25: error: use of undeclared identifier 'v'
for ( v = bl_0->giv; v; v = v->next_iv ) 
                        ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/loop_givs_check/src/loop.c:4949:29: error: use of undeclared identifier 'v'
for ( v = bl_0->giv; v; v = v->next_iv ) 
                            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/loop_givs_check/src/loop.c:4951:21: error: use of undeclared identifier 'v'
if ( ( *( ( _BYTE *)v + 100) & 1) == 0 && ( *( ( _BYTE *)v + 100) & 2) == 0 ) 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/loop_givs_check/src/loop.c:4951:58: error: use of undeclared identifier 'v'
if ( ( *( ( _BYTE *)v + 100) & 1) == 0 && ( *( ( _BYTE *)v + 100) & 2) == 0 ) 
                                                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/loop_givs_check/src/loop.c:4952:26: error: use of undeclared identifier 'v'
check_final_value( loop, v); 
                         ^
9 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/loop_givs_check/src/obj/loop.o] Error 1
